plugins {
	id 'application'
	id 'org.springframework.boot' version "${springBootVersion}"
}
apply plugin: 'io.spring.dependency-management'

group = 'cf.dbaltor'

application {
    mainClassName = 'gateway.LibraryGatewayApplication'
}

applicationDefaultJvmArgs = ["--enable-preview"]

sourceCompatibility = 11
targetCompatibility = 11

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
		// required by spring-cloud-services-starter-config-client
		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${cloudServicesDependencies}"
	}
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-config-client'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
}
